updaed tests and framework

--- a/env/.env.qa
+++ b/env/.env.qa
@@ -1,4 +1,4 @@
-BASE_URL = https://the-internet.herokuapp.com/
-API_URL = https://restful-booker.herokuapp.com
+BASE_URL = https://thinking-tester-contact-list.herokuapp.com/
+API_URL = https://thinking-tester-contact-list.herokuapp.com
 BROWSER = chromium
-HEAD = true
+HEADLESS = false
