--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "report": "npx http-server ./cucumber-report -o index.html",
     "test:dev": "cross-env NODE_ENV=dev npx bddgen && playwright test --ui",
     "test:qa": "cross-env NODE_ENV=qa npx bddgen && playwright test --ui",
+    "test:api:qa": "cross-env NODE_ENV=qa npx bddgen && npx playwright test --grep @api ",
     "test:prod": "cross-env NODE_ENV=prod npx bddgen && playwright test --ui",
     "lint": "eslint . --ext .js,.ts",
     "format": "prettier --write ."
@@ -16,12 +17,15 @@
   "devDependencies": {
     "@playwright/test": "1.47.2",
     "@types/node": "^20.9.4",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "http-server": "14.1.1",
     "nodemon": "3.1.7",
     "npm-run-all": "^4.1.5",
     "playwright-bdd": "7.5.0",
-    "typescript": "5.6.2",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5"
+    "typescript": "5.6.2"
+  },
+  "dependencies": {
+    "@faker-js/faker": "^9.5.0"
   }
 }
