--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,6 +19,6 @@ jobs:
         with:
           name: playwright-artifacts
           path: |
-            playwright-report/
+            cucumber-report/
             test-results/
           retention-days: 10
